--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.11.3",
+    "@react-three/fiber": "^8.0.20",
+    "@react-three/postprocessing": "^2.3.2",
+    "firebase": "^9.8.2",
     "next": "12.1.6",
+    "postprocessing": "^6.27.0",
+    "primeflex": "^3.2.1",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.1.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sharp": "^0.30.6",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
