--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@react-three/drei": "^9.11.3",
     "@react-three/fiber": "^8.0.20",
     "@react-three/postprocessing": "^2.3.2",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
     "next": "12.1.6",
     "postprocessing": "^6.27.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primereact": "^8.1.1",
+    "qrcodejs": "^1.0.0",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "sharp": "^0.30.6",
+    "sweetalert2": "^11.4.17",
     "three": "^0.141.0"
   },
   "devDependencies": {
