--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "localforage": "^1.10.0",
     "next": "12.1.6",
     "postprocessing": "^6.27.0",
     "primeflex": "^3.2.1",
