--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ NEXT_PUBLIC_FB_APP_ID='1:630637201216:web:66f41f3df95348a556dca5'
 NEXT_PUBLIC_FB_MEASURE='G-0MH4DC3ZZX'
 NEXT_PUBLIC_ENC_KEY='@Im21Mr03Robot91#'
 SCM_DO_BUILD_DURING_DEPLOYMENT= 'true'
+NEXT_PUBLIC_MAPS_API_KEY='AIzaSyBKVI1-2DB31Y0s8Y5Mixa8PK50FHwVg1I'
