--- a/package.json
+++ b/package.json
@@ -10,25 +10,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/hub": "^0.3.3",
+    "@huggingface/inference": "^1.6.2",
     "@react-three/drei": "^9.11.3",
     "@react-three/fiber": "^8.0.20",
     "@react-three/postprocessing": "^2.3.2",
+    "@tensorflow/tfjs": "^4.4.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "highlight.js": "^11.7.0",
+    "isomorphic-unfetch": "^4.0.2",
+    "jpeg-js": "^0.4.4",
+    "js-beautify": "^1.14.7",
     "localforage": "^1.10.0",
     "next": "12.1.6",
     "postprocessing": "^6.27.0",
     "primeflex": "^3.2.1",
-    "primeicons": "^5.0.0",
+    "primeicons": "^6.0.1",
     "primereact": "^8.1.1",
     "qrcodejs": "^1.0.0",
+    "quill": "^1.3.7",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "sharp": "^0.30.6",
-    "sweetalert2": "^11.4.17",
-    "three": "^0.141.0"
+    "sweetalert2": "^11.4.8",
+    "three": "^0.141.0",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "8.16.0",
