--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myworks",
+  "name": "imaginy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,13 +18,19 @@
     "@tensorflow/tfjs": "^4.4.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "canny-edge-detector": "^1.0.0",
+    "exif-js": "^2.3.0",
+    "exifr": "^7.1.3",
     "firebase": "^9.8.2",
     "highlight.js": "^11.7.0",
+    "image-js": "^0.35.4",
     "isomorphic-unfetch": "^4.0.2",
     "jpeg-js": "^0.4.4",
     "js-beautify": "^1.14.7",
     "localforage": "^1.10.0",
-    "next": "12.1.6",
+    "marked": "^5.1.0",
+    "next": "^13.4.6",
+    "piexifjs": "^1.0.6",
     "postprocessing": "^6.27.0",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
