--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 NEXT_PUBLIC_VERSION=0.04
 NEXT_PUBLIC_DATE='13/06/2023'
-NEXT_PUBLIC_DB_URL='http://localhost:5000/imagyny/southamerica-east1/server/'
-NEXT_PUBLIC_DB_CLOUD_URL='https://southamerica-east1-imagyny.cloudfunctions.net/server/'
+NEXT_PUBLIC_DB_URL='http://localhost:5000/my-works-3d/southamerica-east1/server/'
+NEXT_PUBLIC_DB_CLOUD_URL='https://southamerica-east1-my-works-3d.cloudfunctions.net/server/'
 
-NEXT_PUBLIC_FB_API_KEY='AIzaSyBC3JabfqSUZA7zJGalIbr8SZT9-5qqUnA'
-NEXT_PUBLIC_FB_AUTH_DOM='imagyny.firebaseapp.com'
-NEXT_PUBLIC_FB_PROJ_ID='imagyny'
-NEXT_PUBLIC_FB_STORAGE='imagyny.appspot.com'
-NEXT_PUBLIC_FB_MESSAGE='733942705367'
-NEXT_PUBLIC_FB_APP_ID='1:733942705367:web:218adcd7ce8f85560c9492'
-NEXT_PUBLIC_FB_MEASURE='G-T238CSQ3ZX'
+NEXT_PUBLIC_FB_API_KEY='AIzaSyCo7SYGHeHMteb_BdNoWRYTkgEH8o0F2to'
+NEXT_PUBLIC_FB_AUTH_DOM='my-works-3d.firebaseapp.com'
+NEXT_PUBLIC_FB_PROJ_ID='my-works-3d'
+NEXT_PUBLIC_FB_STORAGE='my-works-3d.appspot.com'
+NEXT_PUBLIC_FB_MESSAGE='630637201216'
+NEXT_PUBLIC_FB_APP_ID='1:630637201216:web:66f41f3df95348a556dca5'
+NEXT_PUBLIC_FB_MEASURE='G-0MH4DC3ZZX'
 NEXT_PUBLIC_ENC_KEY='@Im21Mr03Robot91#'
 SCM_DO_BUILD_DURING_DEPLOYMENT= 'true'
 NEXT_PUBLIC_MAPS_API_KEY='AIzaSyAPyBEMECaKDkVvN7Xbyj1SUOQ0Ce3Z9y0'
