--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@huggingface/hub": "^0.3.3",
     "@huggingface/inference": "^1.6.2",
     "@react-three/drei": "^9.11.3",
-    "@react-three/fiber": "^8.0.20",
+    "@react-three/fiber": "^8.14.3",
     "@react-three/postprocessing": "^2.3.2",
     "@tensorflow/tfjs": "^4.4.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "canny-edge-detector": "^1.0.0",
+    "chart.js": "^4.4.0",
     "exif-js": "^2.3.0",
     "exifr": "^7.1.3",
     "firebase": "^9.8.2",
@@ -28,6 +29,7 @@
     "jpeg-js": "^0.4.4",
     "js-beautify": "^1.14.7",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "marked": "^5.1.0",
     "next": "^13.4.6",
     "piexifjs": "^1.0.6",
